--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
- 
+ <header>
+  <title>
+   Jenna Mclean
+  </title>
+ </header>
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
+  <h1>Jenna Mclean </h1>
+  <p>Welcome to my website!My first GitHub Page! Hopefully this works!!!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
