--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
  <header>
+  <a rel="stylesheet" type="text/css" href="https://ZxenaMc.github.io/index.css"
   <title>
    Jenna Mclean
   </title>
