--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Jenna Mclean </h1>
   <p>Welcome to my website!My first GitHub Page! Hopefully this works!!!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <embed src="https://media4.giphy.com/avatars/dianapietrzyk/wWrk0vNBjwQp.gif"/>
 </body>
  
 </html>
